Fix: photo links to walnut and sunflower -- not showing up in vercel

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -58,12 +58,14 @@ h1 {
     border-radius: 1rem;
     scrollbar-width: auto;
     box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
   }
   
   /* Styles for the scrollbar handle */
   .sandwitch-items::-webkit-scrollbar-thumb {
     background-color: #ffd5ca; /* Change the color of the scrollbar handle */
-    border-radius: 1rem; 
+    border-radius: 1rem;
+    cursor: pointer; 
   }
 
   .sandwitch-items::-webkit-scrollbar-thumb:hover {
@@ -272,15 +274,21 @@ h1 {
     }
 }  
 
-@media only screen and (max-width: 860px) {
-    .bakery-items {
-        grid-template-columns: 1fr;
-    }
-}    
 
 @media only screen and (max-width: 500px) {
-    .bakery-items {
-        grid-template-columns: 1fr;
+    .left {
+        width: 65rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    
+    .menu {
+        width: fit-content;
+    }
+    
+    .sandwitch-items {
+        grid-template-columns: 1fr 1fr;
     }
     .right {
         flex-direction: column;
